feat: add hash password
